--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Collaboration for Autonomous Science Instruments — Workshop</title>
+  <style>
+    :root {
+      --bg: #f8f6f3;
+      --text: #2c2c2c;
+      --muted: #6b6b6b;
+      --accent: #6d8a72;
+      --card: #ffffff;
+      --border: #d8d3cb;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Helvetica Neue', Arial, sans-serif;
+      color: var(--text);
+      background: var(--bg);
+      line-height: 1.6;
+    }
+
+    .container { max-width: 1100px; margin: 0 auto; padding: 2rem; }
+    .section { margin: 3rem 0; }
+    .section h2 { text-transform: uppercase; color: var(--accent); font-size: 1.25rem; margin-bottom: 1rem; }
+
+    .grid { display: grid; gap: 1rem; }
+
+    .card { background: var(--card); border: 1px solid var(--border); border-radius: 10px; padding: 1rem; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
+
+    .people { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; }
+    .person { background: var(--card); border: 1px solid var(--border); border-radius: 8px; padding: 1rem; text-align: center; }
+    .person img { width: 90px; height: 90px; border-radius: 50%; object-fit: cover; margin-bottom: 0.5rem; }
+    .person .name { font-weight: 600; font-size: 0.95rem; }
+    .person .affil { color: var(--muted); font-size: 0.85rem; }
+
+    footer { border-top: 1px solid var(--border); text-align: center; padding-top: 1rem; color: var(--muted); font-size: 0.9rem; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <!-- Hero -->
+    <section class="section hero" id="hero">
+      <h1>Collaboration for Autonomous Science Instruments</h1>
+      <p>A workshop convening scientists, instrument vendors, and AI-for-Science startups to collaborate on better software and interoperability for autonomous laboratories.</p>
+    </section>
+
+    <!-- Info -->
+    <section class="section info" id="info">
+      <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
+        <div class="card"><h3>When</h3><p><strong>October 23–24, 2025</strong></p></div>
+        <div class="card"><h3>Where</h3><p>San Diego, California</p></div>
+        <div class="card"><h3>Organizer</h3><p><strong>Charles Yang</strong><br>AI for Science Fellow at Renaissance Philanthropy</p></div>
+      </div>
+      <div class="card" style="margin-top:1rem;">
+        <h3>About</h3>
+        <p>This workshop aligns the development of scientific instruments with autonomous workflows. Participants will identify integration challenges, share technical approaches, and plan pilot collaborations between researchers, vendors, and startups.</p>
+      </div>
+    </section>
+
+    <!-- Speakers -->
+    <section class="section" id="speakers">
+      <h2>Speakers</h2>
+      <div class="people">
+        <div class="person"><img src="headshots/venkat.jpg" alt="Venkat Viswanathan"/><div class="name">Venkat Viswanathan</div><div class="affil">University of Michigan</div></div>
+        <div class="person"><img src="headshots/jehad.jpg" alt="Jehad Abed"/><div class="name">Jehad Abed</div><div class="affil">Meta</div></div>
+        <div class="person"><img src="headshots/aaike.jpg" alt="Aaike van Vugt"/><div class="name">Aaike van Vugt</div><div class="affil">VSParticle</div></div>
+        <div class="person"><img src="headshots/austin.jpg" alt="Austin Carson"/><div class="name">Austin Carson</div><div class="affil">SeedAI</div></div>
+        <div class="person"><img src="headshots/hongquan.jpg" alt="Hongquan Li"/><div class="name">Hongquan Li</div><div class="affil">Cephla</div></div>
+        <div class="person"><img src="headshots/caitlin.jpg" alt="Caitlin Hogan"/><div class="name">Caitlin Hogan</div><div class="affil">Labric (YC S25)</div></div>
+        <div class="person"><img src="headshots/jie.jpg" alt="Jie Xu"/><div class="name">Jie Xu</div><div class="affil">Argonne National Lab</div></div>
+        <div class="person"><img src="headshots/milad.jpg" alt="Milad Abolhasani"/><div class="name">Milad Abolhasani</div><div class="affil">North Carolina State University</div></div>
+        <div class="person"><img src="headshots/shijing.jpg" alt="Shijing Sun"/><div class="name">Shijing Sun</div><div class="affil">University of Cambridge</div></div>
+        <div class="person"><img src="headshots/david.jpg" alt="David Fenning"/><div class="name">David Fenning</div><div class="affil">UC San Diego</div></div>
+        <div class="person"><img src="headshots/olivia.jpg" alt="Olivia Li"/><div class="name">Olivia Li</div><div class="affil">MIT</div></div>
+        <div class="person"><img src="headshots/ben.jpg" alt="Ben Clark"/><div class="name">Ben Clark</div><div class="affil">National Renewable Energy Lab</div></div>
+      </div>
+    </section>
+
+    <!-- Participants -->
+    <section class="section" id="participants">
+      <h2>Confirmed Participants</h2>
+      <div class="people">
+        <div class="person"><img src="logos/placeholder.png" alt="Participant"/><div class="name">Scientists, instrument vendors, and AI-for-Science startups</div></div>
+      </div>
+    </section>
+
+    <!-- Committee -->
+    <section class="section" id="committee">
+      <h2>Organizing Committee</h2>
+      <div class="people">
+        <div class="person"><img src="logos/placeholder.png" alt="Committee"/><div class="name">To be announced</div></div>
+      </div>
+    </section>
+
+    <!-- Support -->
+    <section class="section" id="support">
+      <h2>Supported By</h2>
+      <div class="people">
+        <div class="person"><img src="logos/placeholder.png" alt="Supporter"/><div class="name">To be announced</div></div>
+      </div>
+    </section>
+
+    <footer>
+      <p>© 2025 Collaboration for Autonomous Science Instruments — Workshop</p>
+      <p>For questions or accessibility requests, contact the organizer.</p>
+    </footer>
+  </div>
+</body>
+</html>
 
