--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
         <div class="card"><h3>When</h3><p><strong>October 23–24, 2025</strong></p></div>
         <div class="card"><h3>Where</h3><p>San Diego, California</p></div>
-        <div class="card"><h3>Organizer</h3><p><strong>Charles Yang</strong><br>AI for Science Fellow at Renaissance Philanthropy</p></div>
+        <div class="card"><h3>Organizer</h3><p><strong>Charles Yang</strong><br>AI for Science Fellow at <a href="https://www.renaissancephilanthropy.org/" target="_blank">Renaissance Philanthropy</a></p></div>
       </div>
       <div class="card" style="margin-top:1rem;">
         <h3>About</h3>
-        <p>This workshop aligns the development of scientific instruments with autonomous workflows. Participants will identify integration challenges, share technical approaches, and plan pilot collaborations between researchers, vendors, and startups.</p>
+        <p>This workshop aims to catalyze collaborations between researchers, startups, and science instrument vendors to accelerate autonomous lab development.</p>
       </div>
     </section>
 
@@ -104,8 +104,7 @@
     </section>
 
     <footer>
-      <p>© 2025 Collaboration for Autonomous Science Instruments — Workshop</p>
-      <p>For questions or accessibility requests, contact the organizer.</p>
+      <p>2025 Collaborations for Autonomous Science Instruments</p>
     </footer>
   </div>
 </body>
