--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
     <section class="section" id="committee">
       <h2>Organizing Committee</h2>
       <div class="people">
-        <div class="person"><img src="logos/placeholder.png" alt="Committee"/><div class="name">To be announced</div></div>
-      </div>
+        <div class="person"><img src="assets/david_fenning.jpg" alt="David Fenning"/><div class="name">David Fenning</div><div class="affil">UC San Diego</div></div>
+        <div class="person"><img src="assets/jie_xu.jpg" alt="Jie Xu"/><div class="name">Jie Xu</div><div class="affil">Argonne National Lab</div></div>
+        <div class="person"><img src="assets/milad_abolhasani.jpg" alt="Milad Abolhasani"/><div class="name">Milad Abolhasani</div><div class="affil">NC State University</div></div>
+        <div class="person"><img src="assets/shijing_sun.jpg" alt="Shijing Sun"/><div class="name">Shijing Sun</div><div class="affil">University of Cambridge</div></div>      </div>
     </section>
 
     <!-- Support -->
