--- a/index.html
+++ b/index.html
@@ -97,16 +97,9 @@
         <div class="person"><img src="assets/shijing_sun.jpg" alt="Shijing Sun"/><div class="name">Shijing Sun</div><div class="affil">University of Cambridge</div></div>      </div>
     </section>
 
-    <!-- Support -->
-    <section class="section" id="support">
-      <h2>Supported By</h2>
-      <div class="people">
-        <div class="person"><img src="logos/placeholder.png" alt="Supporter"/><div class="name">To be announced</div></div>
-      </div>
-    </section>
-
     <footer>
       <p>2025 Collaborations for Autonomous Science Instruments</p>
+      <p>Supported by: Sloan Foundation and the Navigation Fund</p>
     </footer>
   </div>
 </body>
