--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
         <div class="card"><h3>When</h3><p><strong>October 23–24, 2025</strong></p></div>
         <div class="card"><h3>Where</h3><p>San Diego, California</p></div>
-        <div class="card"><h3>Organizer</h3><p><strong>Charles Yang</strong><br>AI for Science Fellow at <a href="https://www.renaissancephilanthropy.org/" target="_blank">Renaissance Philanthropy</a></p></div>
+        <div class="card"><h3>Organizer</h3>
+          <div class="person"><img src="assets/charles_yang.jpeg" alt="Charles Yang"/></div>
+          <p><strong>Charles Yang</strong><br>AI for Science Fellow at <a href="https://www.renaissancephilanthropy.org/" target="_blank">Renaissance Philanthropy</a></p></div>
       </div>
       <div class="card" style="margin-top:1rem;">
         <h3>About</h3>
