--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="card"><h3>When</h3><p><strong>October 23–24, 2025</strong></p></div>
         <div class="card"><h3>Where</h3><p>San Diego, California</p></div>
         <div class="card"><h3>Organizer</h3>
-          <div class="person"><img src="assets/charles_yang.jpeg" alt="Charles Yang"/></div>
+          <div class="person"><img src="assets/charles_yang.jpg" alt="Charles Yang"/></div>
           <p><strong>Charles Yang</strong><br>AI for Science Fellow at <a href="https://www.renaissancephilanthropy.org/" target="_blank">Renaissance Philanthropy</a></p></div>
       </div>
       <div class="card" style="margin-top:1rem;">
