--- a/index.html
+++ b/index.html
@@ -80,6 +80,37 @@
       </div>
     </section>
 
+    <section class="agenda" id="agenda">
+      <h2>Day 1: Thursday, October 23</h2>
+  <table>
+    <tr><th>Time</th><th>Location</th><th>Details</th></tr>
+    <tr><td>8:00–9:00am</td><td>Bay Terrace</td><td>Breakfast continental</td></tr>
+    <tr><td>9:00–9:45am</td><td>Commodore A</td><td>Charles Yang, Welcome<br>Theresa Mayer, Keynote<br>Icebreaker discussion</td></tr>
+    <tr><td>9:45–10:45am</td><td>Commodore A</td><td>Research Partnership Talks<br>David Fenning and Caitlin Hogan<br>Aaike van Vugt and Jehad Ahmed</td></tr>
+    <tr><td>10:45–11:15am</td><td>Commodore A and Commodore B</td><td>Break</td></tr>
+    <tr><td>11:15–12:00pm</td><td>Brittania and Cambria</td><td>Research Partnership Talks<br>Boris Slautin and Roger Proksch<br>Wei Zhu and consortium members<br>Utkarsh Pratiush and Paolo Longo</td></tr>
+    <tr><td>12:00–1:00pm</td><td>Bay Terrace</td><td>Lunch</td></tr>
+    <tr><td>1:00–2:00pm</td><td>Brittania and Cambria</td><td>Breakout discussions + report-out</td></tr>
+    <tr><td>2:00–2:30pm</td><td>Brittania and Cambria</td><td>Breakout</td></tr>
+    <tr><td>2:30–3:30pm</td><td>Cambria</td><td>Round 1 of research partnerships breakout</td></tr>
+    <tr><td>2:30–3:30pm</td><td>Brittania</td><td>Roundtable discussion on philanthropy, investors, and AI labs on advancing autonomous science</td></tr>
+    <tr><td>3:30–4:00pm</td><td>Brittania and Cambria</td><td>Break</td></tr>
+    <tr><td>4:00–4:30pm</td><td>Commodore A</td><td>Closing session<br>Charles Yang, survey results and next steps</td></tr>
+    <tr><td>4:30–6:00pm</td><td></td><td>Reception</td></tr>
+  </table>
+
+  <h2>Day 2: Friday, October 24</h2>
+  <table>
+    <tr><th>Time</th><th>Location</th><th>Details</th></tr>
+    <tr><td>8:00–9:00am</td><td>Bay Terrace</td><td>Breakfast continental</td></tr>
+    <tr><td>9:00–9:30am</td><td>Commodore A</td><td>Welcome and Keynote<br>Charles Yang, Welcome and Reminders<br>Venkat Viswanathan, UMich</td></tr>
+    <tr><td>9:30–10:30am</td><td>Commodore A</td><td>Round 2 of research partnerships breakout</td></tr>
+    <tr><td>10:00–10:30am</td><td>Commodore A</td><td>Break</td></tr>
+    <tr><td>11:00–12:00pm</td><td>Brittania and Cambria</td><td>Submit research partnerships<br>Follow-ups and closing remarks</td></tr>
+    <tr><td>12:00–1:00pm</td><td>Bay Terrace</td><td>Lunch</td></tr>
+  </table>
+    </section>
+
     <!-- Participants -->
     <section class="section" id="participants">
       <h2>Confirmed Participants</h2>
