--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     .person .name { font-weight: 600; font-size: 0.95rem; }
     .person .affil { color: var(--muted); font-size: 0.85rem; }
 
+    #participants .people { grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
+    #participants .person { text-align: left; padding: 0.75rem 1rem; gap: 0.35rem; display: flex; flex-direction: column; }
+    #participants .person .name { font-size: 1rem; }
+    #participants .person .affil { font-size: 0.85rem; }
+
     .agenda .card { padding: 0; overflow: hidden; margin-bottom: 1.5rem; }
     .agenda table { width: 100%; border-collapse: collapse; table-layout: fixed; }
     .agenda th { background: var(--accent); color: #fff; text-align: left; font-weight: 600; letter-spacing: 0.03em; }
@@ -128,7 +133,64 @@
     <section class="section" id="participants">
       <h2>Confirmed Participants</h2>
       <div class="people">
-        <div class="person"><img src="logos/placeholder.png" alt="Participant"/><div class="name">Scientists, instrument vendors, and AI-for-Science startups</div></div>
+        <div class="person"><div class="name">Sergio Pablo Garcia Carrillo</div><div class="affil">Acceleration Consortium</div></div>
+        <div class="person"><div class="name">Aaron Gilad Kusne</div><div class="affil">NIST</div></div>
+        <div class="person"><div class="name">Benji Maruyama</div><div class="affil">Air Force Research Laboratory</div></div>
+        <div class="person"><div class="name">Kinston Ackölf</div><div class="affil">University of Utah</div></div>
+        <div class="person"><div class="name">Venkat Viswanathan</div><div class="affil">University of Michigan</div></div>
+        <div class="person"><div class="name">Yan Zeng</div><div class="affil">Florida State University</div></div>
+        <div class="person"><div class="name">Howie Joress</div><div class="affil">NIST</div></div>
+        <div class="person"><div class="name">Steven Spurgeon</div><div class="affil">National Renewable Energy Laboratory / Colorado School of Mines</div></div>
+        <div class="person"><div class="name">Doga Ozgulbas</div><div class="affil">Argonne National Laboratory</div></div>
+        <div class="person"><div class="name">Nina Lu</div><div class="affil">OnlyCures</div></div>
+        <div class="person"><div class="name">Fernando Pérez</div><div class="affil">UC Berkeley</div></div>
+        <div class="person"><div class="name">Yukun Wu</div><div class="affil">Argonne National Laboratory</div></div>
+        <div class="person"><div class="name">Connor Hogan</div><div class="affil">Labric</div></div>
+        <div class="person"><div class="name">Caitlin Hogan</div><div class="affil">Labric</div></div>
+        <div class="person"><div class="name">Jehad Abed</div><div class="affil">Materials Data Factory</div></div>
+        <div class="person"><div class="name">Heather Job</div><div class="affil">Pacific Northwest National Laboratory</div></div>
+        <div class="person"><div class="name">Hongquan Li</div><div class="affil">Cephla</div></div>
+        <div class="person"><div class="name">Austin Carson</div><div class="affil">SeedAI</div></div>
+        <div class="person"><div class="name">Chad Wilson</div><div class="affil">Mirror Physics</div></div>
+        <div class="person"><div class="name">Robert Moore</div><div class="affil">Oak Ridge National Laboratory</div></div>
+        <div class="person"><div class="name">Semion Saikin</div><div class="affil">Kebotix, Inc.</div></div>
+        <div class="person"><div class="name">Nicole Nelson</div><div class="affil">University of Wisconsin Madison</div></div>
+        <div class="person"><div class="name">Daniil Boiko</div><div class="affil">Onepot AI, Inc. / prev. Carnegie Mellon University</div></div>
+        <div class="person"><div class="name">Maher Alghalayini</div><div class="affil">Lawrence Berkeley National Laboratory</div></div>
+        <div class="person"><div class="name">Nicolai Dorka</div><div class="affil">Stanford University</div></div>
+        <div class="person"><div class="name">Utkarsh Pratiush</div><div class="affil">UT KNOXVILLE</div></div>
+        <div class="person"><div class="name">Cristian Ponce</div><div class="affil">Tetsuwan Scientific</div></div>
+        <div class="person"><div class="name">Azeem Ur Rehman</div><div class="affil">Sciprios GmbH</div></div>
+        <div class="person"><div class="name">Benji Maruyama</div><div class="affil">AFRL</div></div>
+        <div class="person"><div class="name">Yuxing Fei</div><div class="affil">University of California, Berkeley</div></div>
+        <div class="person"><div class="name">Hiromu Rose</div><div class="affil">Episteme</div></div>
+        <div class="person"><div class="name">Theresa Mayer</div><div class="affil">Carnegie Mellon University</div></div>
+        <div class="person"><div class="name">Aleks Siemenn</div><div class="affil">MIT</div></div>
+        <div class="person"><div class="name">Bryan Cheong</div><div class="affil">Salesforce Inc</div></div>
+        <div class="person"><div class="name">Theresa Mayer</div><div class="affil">Carnegie Mellon University</div></div>
+        <div class="person"><div class="name">Josh Greenberg</div><div class="affil">Alfred P. Sloan Foundation</div></div>
+        <div class="person"><div class="name">Boris Slautin</div><div class="affil">University of Tennessee</div></div>
+        <div class="person"><div class="name">Ian Meyer</div><div class="affil">Satomic.ai</div></div>
+        <div class="person"><div class="name">Sean Finamore</div><div class="affil">Medra</div></div>
+        <div class="person"><div class="name">Aditya Rajagopal</div><div class="affil">Esperto Medical</div></div>
+        <div class="person"><div class="name">Eric Goergen</div><div class="affil">Thermo Fisher Scientific</div></div>
+        <div class="person"><div class="name">Sheryl Sanchez</div><div class="affil">University of Tennessee-Knoxville</div></div>
+        <div class="person"><div class="name">Hemanth Neelgund Ramesh</div><div class="affil">University of Washington</div></div>
+        <div class="person"><div class="name">Paolo Longo</div><div class="affil">Thermo Fisher Scientific</div></div>
+        <div class="person"><div class="name">Devora Najjar</div><div class="affil">Alfred P. Sloan Foundation</div></div>
+        <div class="person"><div class="name">David Fenning</div><div class="affil">Chemical &amp; Nano Engineering, UC San Diego</div></div>
+        <div class="person"><div class="name">Jack Wells</div><div class="affil">NVIDIA</div></div>
+        <div class="person"><div class="name">Daniel Abdoue</div><div class="affil">SOLEIL UCSD</div></div>
+        <div class="person"><div class="name">Thomas Milton</div><div class="affil">Amodo Design</div></div>
+        <div class="person"><div class="name">Justin Gallivan</div><div class="affil">W.M. Keck Foundation</div></div>
+        <div class="person"><div class="name">Shrika Eddula</div><div class="affil">MIT</div></div>
+        <div class="person"><div class="name">Giovanni Mariotta</div><div class="affil">Thermo Fisher Scientific</div></div>
+        <div class="person"><div class="name">James Massaquoi</div><div class="affil">Glasswing Ventures</div></div>
+        <div class="person"><div class="name">Connor Coley</div><div class="affil">MIT</div></div>
+        <div class="person"><div class="name">Kennedy Bae</div><div class="affil">Glassfloor</div></div>
+        <div class="person"><div class="name">Matt Clancy</div><div class="affil">Open Philanthropy</div></div>
+        <div class="person"><div class="name">Aaike van Vugt</div><div class="affil">VSPARTICLE B.V.</div></div>
+        <div class="person"><div class="name">Wei Zhou</div><div class="affil">Virginia Tech</div></div>
       </div>
     </section>
 
@@ -144,7 +206,7 @@
 
     <footer>
       <p>2025 Collaborations for Autonomous Science Instruments</p>
-      <p>With gracious support from <a href="https://sloan.org/" target="_blank">Sloan Foundation</a> and <a href="https://www.navigation.org/" target="_blank>the Navigation Fund</a></p>
+      <p>With gracious support from <a href="https://sloan.org/" target="_blank">Sloan Foundation</a> and <a href="https://www.navigation.org/" target="_blank">the Navigation Fund</a></p>
     </footer>
   </div>
 </body>
