--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
         <div class="person"><div class="name">Robert Moore</div><div class="affil">Oak Ridge National Laboratory</div></div>
         <div class="person"><div class="name">Semion Saikin</div><div class="affil">Kebotix, Inc.</div></div>
         <div class="person"><div class="name">Nicole Nelson</div><div class="affil">University of Wisconsin Madison</div></div>
-        <div class="person"><div class="name">Daniil Boiko</div><div class="affil">Onepot AI, Inc. / prev. Carnegie Mellon University</div></div>
+        <div class="person"><div class="name">Daniil Boiko</div><div class="affil">Onepot AI, Inc.</div></div>
         <div class="person"><div class="name">Maher Alghalayini</div><div class="affil">Lawrence Berkeley National Laboratory</div></div>
         <div class="person"><div class="name">Nicolai Dorka</div><div class="affil">Stanford University</div></div>
-        <div class="person"><div class="name">Utkarsh Pratiush</div><div class="affil">UT KNOXVILLE</div></div>
+        <div class="person"><div class="name">Utkarsh Pratiush</div><div class="affil">UT Knoxville</div></div>
         <div class="person"><div class="name">Cristian Ponce</div><div class="affil">Tetsuwan Scientific</div></div>
         <div class="person"><div class="name">Azeem Ur Rehman</div><div class="affil">Sciprios GmbH</div></div>
         <div class="person"><div class="name">Benji Maruyama</div><div class="affil">AFRL</div></div>
@@ -178,18 +178,14 @@
         <div class="person"><div class="name">Hemanth Neelgund Ramesh</div><div class="affil">University of Washington</div></div>
         <div class="person"><div class="name">Paolo Longo</div><div class="affil">Thermo Fisher Scientific</div></div>
         <div class="person"><div class="name">Devora Najjar</div><div class="affil">Alfred P. Sloan Foundation</div></div>
-        <div class="person"><div class="name">David Fenning</div><div class="affil">Chemical &amp; Nano Engineering, UC San Diego</div></div>
+        <div class="person"><div class="name">David Fenning</div><div class="affil">UC San Diego</div></div>
         <div class="person"><div class="name">Jack Wells</div><div class="affil">NVIDIA</div></div>
-        <div class="person"><div class="name">Daniel Abdoue</div><div class="affil">SOLEIL UCSD</div></div>
+        <div class="person"><div class="name">Daniel Abdoue</div><div class="affil">UC San Diego</div></div>
         <div class="person"><div class="name">Thomas Milton</div><div class="affil">Amodo Design</div></div>
         <div class="person"><div class="name">Justin Gallivan</div><div class="affil">W.M. Keck Foundation</div></div>
         <div class="person"><div class="name">Shrika Eddula</div><div class="affil">MIT</div></div>
         <div class="person"><div class="name">Giovanni Mariotta</div><div class="affil">Thermo Fisher Scientific</div></div>
-        <div class="person"><div class="name">James Massaquoi</div><div class="affil">Glasswing Ventures</div></div>
-        <div class="person"><div class="name">Connor Coley</div><div class="affil">MIT</div></div>
-        <div class="person"><div class="name">Kennedy Bae</div><div class="affil">Glassfloor</div></div>
-        <div class="person"><div class="name">Matt Clancy</div><div class="affil">Open Philanthropy</div></div>
-        <div class="person"><div class="name">Aaike van Vugt</div><div class="affil">VSPARTICLE B.V.</div></div>
+        <div class="person"><div class="name">Aaike van Vugt</div><div class="affil">Vsparticle</div></div>
         <div class="person"><div class="name">Wei Zhou</div><div class="affil">Virginia Tech</div></div>
       </div>
     </section>
