--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Hero -->
     <section class="section hero" id="hero">
       <h1>Collaboration for Autonomous Science Instruments</h1>
-      <p>A workshop convening scientists, instrument vendors, and AI-for-Science startups to collaborate on better software and interoperability for autonomous laboratories.</p>
+      <p>A workshop convening researchers, science instrument vendors, and autonomous science startups to collaborate on better software and interoperability to accelerate autonomous lab development.</p>
     </section>
 
     <!-- Info -->
@@ -79,18 +79,8 @@
     <section class="section" id="speakers">
       <h2>Speakers</h2>
       <div class="people">
-        <div class="person"><img src="headshots/venkat.jpg" alt="Venkat Viswanathan"/><div class="name">Venkat Viswanathan</div><div class="affil">University of Michigan</div></div>
-        <div class="person"><img src="headshots/jehad.jpg" alt="Jehad Abed"/><div class="name">Jehad Abed</div><div class="affil">Meta</div></div>
-        <div class="person"><img src="headshots/aaike.jpg" alt="Aaike van Vugt"/><div class="name">Aaike van Vugt</div><div class="affil">VSParticle</div></div>
-        <div class="person"><img src="headshots/austin.jpg" alt="Austin Carson"/><div class="name">Austin Carson</div><div class="affil">SeedAI</div></div>
-        <div class="person"><img src="headshots/hongquan.jpg" alt="Hongquan Li"/><div class="name">Hongquan Li</div><div class="affil">Cephla</div></div>
-        <div class="person"><img src="headshots/caitlin.jpg" alt="Caitlin Hogan"/><div class="name">Caitlin Hogan</div><div class="affil">Labric (YC S25)</div></div>
-        <div class="person"><img src="headshots/jie.jpg" alt="Jie Xu"/><div class="name">Jie Xu</div><div class="affil">Argonne National Lab</div></div>
-        <div class="person"><img src="headshots/milad.jpg" alt="Milad Abolhasani"/><div class="name">Milad Abolhasani</div><div class="affil">North Carolina State University</div></div>
-        <div class="person"><img src="headshots/shijing.jpg" alt="Shijing Sun"/><div class="name">Shijing Sun</div><div class="affil">University of Cambridge</div></div>
-        <div class="person"><img src="headshots/david.jpg" alt="David Fenning"/><div class="name">David Fenning</div><div class="affil">UC San Diego</div></div>
-        <div class="person"><img src="headshots/olivia.jpg" alt="Olivia Li"/><div class="name">Olivia Li</div><div class="affil">MIT</div></div>
-        <div class="person"><img src="headshots/ben.jpg" alt="Ben Clark"/><div class="name">Ben Clark</div><div class="affil">National Renewable Energy Lab</div></div>
+        <div class="person"><img src="assets/venkat_viswanathan.jpg" alt="Venkat Viswanathan"/><div class="name">Venkat Viswanathan</div><div class="affil">University of Michigan</div></div>
+        <div class="person"><img src="assets/theresa_mayer.jpg" alt="Theresa Mayer"/><div class="name">Theresa Mayer</div><div class="affil">Carnegie Mellon University</div></div>
       </div>
     </section>
 
