--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
               <tr><th scope="col">Time</th><th scope="col">Event</th><th scope="col">Details</th></tr>
             </thead>
             <tbody>
-              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Continental buffet and networking</td></tr>
+              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>buffet and networking</td></tr>
               <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, Welcome<br>Theresa Mayer, Keynote<br>Icebreaker discussion</td></tr>
-              <tr><td>9:45–10:45am</td><td>Research Talks I</td><td>David Fenning and Caitlin Hogan<br>Aaike van Vugt and Jehad Ahmed</td></tr>
+              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning and Caitlin Hogan<br>Aaike van Vugt and Jehad Ahmed</td></tr>
               <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
-              <tr><td>11:15–12:00pm</td><td>Research Talks II</td><td>Boris Slautin and Roger Proksch<br>Wei Zhu and consortium members<br>Utkarsh Pratiush and Paolo Longo</td></tr>
-              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Seasonal buffet lunch</td></tr>
-              <tr><td>1:00–2:00pm</td><td>Breakout Reports</td><td>Breakout discussions and report-outs</td></tr>
-              <tr><td>2:00–2:30pm</td><td>Breakout Prep</td><td>Teams regroup and plan next sessions</td></tr>
-              <tr><td>2:30–3:30pm</td><td>Research Breakouts</td><td>Round 1 of research partnerships breakout</td></tr>
-              <tr><td>2:30–3:30pm</td><td>Roundtable</td><td>Philanthropy, investors, and AI labs on advancing autonomous science</td></tr>
+              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning TalksII</td><td>Boris Slautin and Roger Proksch<br>Wei Zhu and consortium members<br>Utkarsh Pratiush and Paolo Longo</td></tr>
+              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Lunch</td></tr>
+              <tr><td>1:00–2:00pm</td><td>Breakout Discussion</td><td>Breakout discussions and report-outs on challenges & opportunities for autonomous science instrumentation</td></tr>
+              <tr><td>2:00–2:30pm</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
+              <tr><td>2:30–3:30pm</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 1 of research partnerships breakout</td></tr>
+              <tr><td>2:30–3:30pm</td><td>Autonomous Science Roundtable</td><td>Roundtable discussion with philanthropists, investors, and AI labs on advancing autonomous labs</td></tr>
               <tr><td>3:30–4:00pm</td><td>Break</td><td>Refreshments</td></tr>
               <tr><td>4:00–4:30pm</td><td>Closing Session</td><td>Charles Yang, survey results and next steps</td></tr>
               <tr><td>4:30–6:00pm</td><td>Reception</td><td>Networking reception</td></tr>
@@ -148,9 +148,9 @@
             <tbody>
               <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Continental buffet and networking</td></tr>
               <tr><td>9:00–9:30am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, Welcome and reminders<br>Venkat Viswanathan, U Mich</td></tr>
-              <tr><td>9:30–10:30am</td><td>Research Breakouts</td><td>Round 2 of research partnerships breakout</td></tr>
+              <tr><td>9:30–10:30am</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 2 of research partnerships breakout</td></tr>
               <tr><td>10:00–10:30am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
-              <tr><td>11:00–12:00pm</td><td>Final Presentations</td><td>Submit research partnerships<br>Follow-ups and closing remarks</td></tr>
+              <tr><td>11:00–12:00pm</td><td>Closing Session</td><td>Submit research partnerships<br>Follow-ups and closing remarks</td></tr>
               <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Farewell lunch</td></tr>
             </tbody>
           </table>
