--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             <tbody>
               <tr><td>8:00–9:00am</td><td>Breakfast</td><td>buffet and networking</td></tr>
               <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, Welcome<br>Theresa Mayer, Keynote<br>Icebreaker discussion</td></tr>
-              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning and Caitlin Hogan<br>Aaike van Vugt and Jehad Ahmed</td></tr>
+              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (UCSD) and Caitlin Hogan (Labric) <br>Jehad Ahmed (Meta) and Aaike van Vugt (Vsparticle) </td></tr>
               <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
-              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning TalksII</td><td>Boris Slautin and Roger Proksch<br>Wei Zhu and consortium members<br>Utkarsh Pratiush and Paolo Longo</td></tr>
+              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (UT Knoxville) and Roger Proksch (Oxford Instruments)<br>Wei Zhu (Virginia Tech) and consortium members<br>Utkarsh Pratiush (UT Knoxville) and Paolo Longo (Thermo Fisher)</td></tr>
               <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Lunch</td></tr>
               <tr><td>1:00–2:00pm</td><td>Breakout Discussion</td><td>Breakout discussions and report-outs on challenges & opportunities for autonomous science instrumentation</td></tr>
               <tr><td>2:00–2:30pm</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
