--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
     .person .name { font-weight: 600; font-size: 0.95rem; }
     .person .affil { color: var(--muted); font-size: 0.85rem; }
 
+    .organizer-card { display: flex; flex-direction: column; gap: 0.75rem; }
+    .organizer-card h3 { margin: 0; text-transform: none; font-size: 1.1rem; }
+    .organizer-info { display: flex; gap: 1rem; align-items: center; }
+    .organizer-info img { width: 72px; height: 72px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 6px rgba(0,0,0,0.08); }
+    .organizer-text { display: flex; flex-direction: column; gap: 0.25rem; }
+    .organizer-text .name { font-weight: 600; font-size: 1rem; }
+    .organizer-text .affil { color: var(--muted); font-size: 0.9rem; }
+
     .sr-only {
       position: absolute;
       width: 1px;
@@ -84,9 +92,16 @@
       <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
         <div class="card"><h3>When</h3><p><strong>October 23–24, 2025</strong></p></div>
         <div class="card"><h3>Where</h3><p>San Diego, California</p></div>
-        <div class="card"><h3>Organizer</h3>
-          <div class="person"><img src="assets/charles_yang.jpg" alt="Charles Yang"/><div class="name">Charles Yang</div><div class="affil">AI for Science Fellow at <a href="https://www.renaissancephilanthropy.org/" target="_blank">Renaissance Philanthropy</a></div></div>
-      </div>
+        <div class="card organizer-card">
+          <h3>Organizer</h3>
+          <div class="organizer-info">
+            <img src="assets/charles_yang.jpg" alt="Charles Yang" />
+            <div class="organizer-text">
+              <div class="name">Charles Yang</div>
+              <div class="affil">AI for Science Fellow at <a href="https://www.renaissancephilanthropy.org/" target="_blank">Renaissance Philanthropy</a></div>
+            </div>
+          </div>
+        </div>
     </section>
 
     <!-- Speakers -->
