--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
       line-height: 1.6;
     }
 
-    .container { max-width: 1100px; margin: 0 auto; padding: 2rem; }
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 2rem;
+      padding-top: calc(2rem + 110px);
+    }
     .section { margin: 3rem 0; }
     .section h2 { text-transform: uppercase; color: var(--accent); font-size: 1.25rem; margin-bottom: 1rem; }
 
@@ -71,15 +76,35 @@
     .agenda tr:nth-child(even) td { background: #f1eee8; }
     .agenda tr:last-child td { border-bottom: none; }
 
+    .site-logo {
+      position: fixed;
+      top: 1.25rem;
+      right: 1.5rem;
+      width: 120px;
+      max-width: 22vw;
+      height: auto;
+      z-index: 1000;
+    }
+
     @media (max-width: 720px) {
       .agenda .card { overflow-x: auto; }
       .agenda table { min-width: 520px; }
+
+      .site-logo {
+        width: 90px;
+        top: 0.75rem;
+        right: 1rem;
+      }
+      .container {
+        padding-top: calc(2rem + 90px);
+      }
     }
 
     footer { border-top: 1px solid var(--border); text-align: center; padding-top: 1rem; color: var(--muted); font-size: 0.9rem; }
   </style>
 </head>
 <body>
+  <img src="assets/renphil.jpg" alt="Renaissance Philanthropy logo" class="site-logo" />
   <div class="container">
     <!-- Hero -->
     <section class="section hero" id="hero">
@@ -246,4 +271,3 @@
   </div>
 </body>
 </html>
-
