--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     <!-- Hero -->
     <section class="section hero" id="hero">
       <h1>Collaboration for Autonomous Science Instruments</h1>
-      <p>A workshop convening researchers, science instrument vendors, and autonomous science startups to collaborate on better software and interoperability to accelerate autonomous lab development.</p>
+      <p>A workshop convening researchers, science instrument vendors, and autonomous science startups to collaborate on better software and interoperability to accelerate autonomous lab development.
+      <br>
+      Hosted by <a href="https://www.renaissancephilanthropy.org/" target="_blank>Renaissance Philanthropy</a>.</p>
     </section>
 
     <!-- Info -->
