--- a/index.html
+++ b/index.html
@@ -131,19 +131,19 @@
               <tr><th scope="col">Time</th><th scope="col">Event</th><th scope="col">Details</th></tr>
             </thead>
             <tbody>
-              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Buffet and networking.</td></tr>
-              <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome remarks.<br />Theresa Mayer, keynote address.<br />Icebreaker discussion.</td></tr>
-              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (University of California, San Diego) and Caitlin Hogan (Labric).<br />Jehad Ahmed (Meta) and Aaike van Vugt (VSParticle).</td></tr>
-              <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations.</td></tr>
-              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (University of Tennessee, Knoxville) and Roger Proksch (Oxford Instruments).<br />Wei Zhu (Virginia Tech) and consortium members.<br />Utkarsh Pratiush (University of Tennessee, Knoxville) and Paolo Longo (Thermo Fisher).</td></tr>
-              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Catered lunch.</td></tr>
-              <tr><td>1:00–2:00pm</td><td>Breakout Discussion</td><td>Breakout discussions and report-outs on challenges and opportunities for autonomous science instrumentation.</td></tr>
-              <tr><td>2:00–2:30pm</td><td>Break</td><td>Coffee and hallway conversations.</td></tr>
-              <tr><td>2:30–3:30pm</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 1 of research partnership breakouts.</td></tr>
-              <tr><td>2:30–3:30pm</td><td>Autonomous Science Roundtable</td><td>Concurrent roundtable with philanthropists, investors, and AI labs on advancing autonomous laboratories.</td></tr>
-              <tr><td>3:30–4:00pm</td><td>Break</td><td>Refreshments.</td></tr>
-              <tr><td>4:00–4:30pm</td><td>Closing Session</td><td>Charles Yang, survey results and next steps.</td></tr>
-              <tr><td>4:30–6:00pm</td><td>Reception</td><td>Networking reception.</td></tr>
+              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Buffet and networking</td></tr>
+              <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome remarks<br />Theresa Mayer, keynote address<br />Icebreaker discussion</td></tr>
+              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (University of California, San Diego) and Caitlin Hogan (Labric)<br />Jehad Ahmed (Meta) and Aaike van Vugt (VSParticle)</td></tr>
+              <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
+              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (University of Tennessee, Knoxville) and Roger Proksch (Oxford Instruments).<br />Wei Zhu (Virginia Tech) and consortium members<br />Utkarsh Pratiush (University of Tennessee, Knoxville) and Paolo Longo (Thermo Fisher).</td></tr>
+              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Catered lunch</td></tr>
+              <tr><td>1:00–2:00pm</td><td>Breakout Discussion</td><td>Breakout discussions and report-outs on challenges and opportunities for autonomous science instrumentation</td></tr>
+              <tr><td>2:00–2:30pm</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
+              <tr><td>2:30–3:30pm</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 1 of research partnership breakouts</td></tr>
+              <tr><td>2:30–3:30pm</td><td>Autonomous Science Roundtable</td><td>Concurrent roundtable with philanthropists, investors, and AI labs on advancing autonomous laboratories</td></tr>
+              <tr><td>3:30–4:00pm</td><td>Break</td><td>Refreshments</td></tr>
+              <tr><td>4:00–4:30pm</td><td>Closing Session</td><td>Charles Yang, survey results and next steps</td></tr>
+              <tr><td>4:30–6:00pm</td><td>Reception</td><td>Networking reception</td></tr>
             </tbody>
           </table>
         </div>
@@ -161,12 +161,12 @@
               <tr><th scope="col">Time</th><th scope="col">Event</th><th scope="col">Details</th></tr>
             </thead>
             <tbody>
-              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Continental buffet and networking.</td></tr>
-              <tr><td>9:00–9:30am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome and reminders.<br />Venkat Viswanathan (University of Michigan), keynote address.</td></tr>
-              <tr><td>9:30–10:30am</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 2 of research partnership breakouts.</td></tr>
-              <tr><td>10:30–11:00am</td><td>Break</td><td>Coffee and hallway conversations.</td></tr>
-              <tr><td>11:00–12:00pm</td><td>Closing Session</td><td>Submit research partnerships.<br />Follow-ups and closing remarks.</td></tr>
-              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Farewell lunch.</td></tr>
+              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Continental buffet and networking</td></tr>
+              <tr><td>9:00–9:30am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome and reminders<br />Venkat Viswanathan (University of Michigan), keynote address</td></tr>
+              <tr><td>9:30–10:30am</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 2 of research partnership breakouts</td></tr>
+              <tr><td>10:30–11:00am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
+              <tr><td>11:00–12:00pm</td><td>Closing Session</td><td>Submit research partnerships<br />Follow-ups and closing remarks</td></tr>
+              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Farewell lunch</td></tr>
             </tbody>
           </table>
         </div>
