--- a/index.html
+++ b/index.html
@@ -71,6 +71,26 @@
     .agenda tr:nth-child(even) td { background: #f1eee8; }
     .agenda tr:last-child td { border-bottom: none; }
 
+    .materials-list {
+      list-style: disc;
+      padding-left: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      margin: 0;
+    }
+
+    .materials-list a {
+      color: var(--accent);
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .materials-list a:hover,
+    .materials-list a:focus {
+      text-decoration: underline;
+    }
+
     @media (max-width: 720px) {
       .agenda .card { overflow-x: auto; }
       .agenda table { min-width: 520px; }
@@ -106,6 +126,18 @@
             </div>
           </div>
         </div>
+    </section>
+
+    <!-- Materials -->
+    <section class="section" id="materials">
+      <h2>Workshop Materials</h2>
+      <div class="card">
+        <ul class="materials-list">
+          <li><a href="#">Breakout Discussion Guide</a></li>
+          <li><a href="#">Research Partnership Proposal Form</a></li>
+          <li><a href="#">Workshop Feedback Form</a></li>
+        </ul>
+      </div>
     </section>
 
     <!-- Speakers -->
