--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
       <h2>Workshop Materials</h2>
       <div class="card">
         <ul class="materials-list">
+          <li><a href="https://docs.google.com/document/d/1oe7o9ilaxz-Xm1y3HOU1B1wO9ZzCGaVP-fNCmY2dBYg/edit?usp=sharing">1-Pager Research Partnership Proposal Template [for Researchers]</a></li>
           <li><a href="https://docs.google.com/document/d/1_GshUPZac_UxX768GrE2Z5AEZCTrlPjgnLSvQdUjA2U/edit?usp=sharing">Breakout Discussion Doc - Day 1</a></li>
           <li>Have you formed a research partnership from this workshop? Fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1As2t1Vasjpk1Bc5Lxp4FL3m5PPkem49RwoIPnpgkwBAJCg/viewform?usp=dialog">Research Partnership Form</a></li>
         </ul>
