--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome remarks<br />Theresa Mayer, keynote address<br />Icebreaker discussion</td></tr>
               <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (University of California, San Diego) and Caitlin Hogan (Labric)<br />Jehad Ahmed (Meta) and Aaike van Vugt (VSParticle)</td></tr>
               <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
-              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (University of Tennessee, Knoxville) and Roger Proksch (Oxford Instruments).<br />Wei Zhu (Virginia Tech) and consortium members<br />Utkarsh Pratiush (University of Tennessee, Knoxville) and Paolo Longo (Thermo Fisher).</td></tr>
+              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (University of Tennessee, Knoxville) and Roger Proksch (Oxford Instruments).<br />Wei Zhou (Virginia Tech) and consortium members<br />Utkarsh Pratiush (University of Tennessee, Knoxville) and Paolo Longo (Thermo Fisher).</td></tr>
               <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Catered lunch</td></tr>
               <tr><td>1:00–2:00pm</td><td>Breakout Discussion</td><td>Breakout discussions and report-outs on challenges and opportunities for autonomous science instrumentation</td></tr>
               <tr><td>2:00–2:30pm</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
@@ -246,7 +246,6 @@
         <div class="person"><div class="name">Nina Lu</div><div class="affil">OnlyCures</div></div>
         <div class="person"><div class="name">Paolo Longo</div><div class="affil">Thermo Fisher Scientific</div></div>
         <div class="person"><div class="name">Robert Moore</div><div class="affil">Oak Ridge National Laboratory</div></div>
-        <div class="person"><div class="name">Sean Finamore</div><div class="affil">Medra</div></div>
         <div class="person"><div class="name">Semion Saikin</div><div class="affil">Kebotix Inc.</div></div>
         <div class="person"><div class="name">Sergio Pablo Garcia Carrillo</div><div class="affil">Acceleration Consortium</div></div>
         <div class="person"><div class="name">Sheryl Sanchez</div><div class="affil">University of Tennessee, Knoxville</div></div>
