--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome remarks<br />Theresa Mayer, keynote address<br />Icebreaker discussion</td></tr>
               <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (University of California, San Diego) and Caitlin Hogan (Labric)<br />Jehad Ahmed (Meta) and Aaike van Vugt (VSParticle)</td></tr>
               <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
-              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (University of Tennessee, Knoxville) and Roger Proksch (Oxford Instruments).<br />Wei Zhou (Virginia Tech) and consortium members<br />Utkarsh Pratiush (University of Tennessee, Knoxville) and Paolo Longo (Thermo Fisher).</td></tr>
+              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (University of Tennessee, Knoxville) and Roger Proksch (Oxford Instruments).<br />Wei Zhou (Virginia Tech) and Mark Huntington (PhysicsX) <br />Utkarsh Pratiush (University of Tennessee, Knoxville) and Paolo Longo (Thermo Fisher).</td></tr>
               <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Catered lunch</td></tr>
               <tr><td>1:00–2:00pm</td><td>Breakout Discussion</td><td>Breakout discussions and report-outs on challenges and opportunities for autonomous science instrumentation</td></tr>
               <tr><td>2:00–2:30pm</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
