--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <tbody>
               <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Buffet and networking</td></tr>
               <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome remarks<br />Theresa Mayer, keynote address<br />Icebreaker discussion</td></tr>
-              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (University of California, San Diego) and Caitlin Hogan (Labric)<br />Jehad Ahmed (Meta) and Aaike van Vugt (VSParticle)</td></tr>
+              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (University of California, San Diego) and Caitlin Hogan (Labric)<br />Jehad Ahmed (Meta) and Aaike van Vugt (VSParticle) <br />Nikolai Dorka (Stanford)and Hongquan Li (Cephla)</td></tr>
               <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
               <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (University of Tennessee, Knoxville) and Roger Proksch (Oxford Instruments).<br />Wei Zhou (Virginia Tech) and Mark Huntington (PhysicsX) <br />Utkarsh Pratiush (University of Tennessee, Knoxville) and Paolo Longo (Thermo Fisher).</td></tr>
               <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Catered lunch</td></tr>
