--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
           <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf-8MYOWRjVzZ9uky57mJe_Y3KmXobXHeZ7HB1dojyMsGW3Vg/viewform?usp=sharing&ouid=101347934074977245831">Vendor Feedback Form [for Researchers]</a></li>
           <li><a href="https://docs.google.com/document/d/1_GshUPZac_UxX768GrE2Z5AEZCTrlPjgnLSvQdUjA2U/edit?usp=sharing">Breakout Discussion Doc - Day 1</a></li>
           <li>Have you formed a research partnership from this workshop? Fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLSd1As2t1Vasjpk1Bc5Lxp4FL3m5PPkem49RwoIPnpgkwBAJCg/viewform?usp=dialog">Research Partnership Form</a></li>
+          <li>Venue wifi: LCBR_Meetings, pin is renphil25</a></li>
         </ul>
       </div>
     </section>
